[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-log-analyzer"
version = "1.0.0"
description = "AI-powered log analyzer for identifying errors and patterns."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-log-analyzer = "ai_log_analyzer.main:cli"

[tool.setuptools.packages.find]
include = ["ai_log_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
